--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "lucide-react": "^0.395.0",
+    "openai": "^5.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
